 * Fix #3214: Private projects links get replaced by public project links.
 * Fix #3231: Redirect problem when user clicks on a bug link while not logged in.
 * Fix #3230: German translation [corrections].
 * Languages: Updated Italian, German, Spanish, Slovak, Swedish and Dutch localisations.
 * Languages: Synchronised localisation files with English localisation.

2003.03.22  -  0.18.0a4

 * Check whether other forms of compression are enabled before we turn on ob_gzhandler() in our output handler.  This should hopefully avoid problems people have had with blank pages resulting from compression problems.
 * Remove "show source" functionality which was a security hole and of little use
 * Languages: Updated Italian and Dutch localisations.
 * Languages: Added Slovak localisation.
 * Languages: Synchronised localisation files with English localisation.
 * Languages: Changed code page of Czech translation.
 * Enhancement: Added bug summary by project on summary page (#1759).
 * Enhancement: Reduced number of SQL queries on summary page (#3046).
 * Enhancement: Field names in bug history are now localized.
 * Enhancement: g_use_iis default value is now based on auto-detection of IIS servers.  Before it was defaulted to OFF.
 * Fix: 'Display selected only' on print bugs page fixed.
 * Fix: 'Hide resolved' now also works for report printing and export.
 * Fix: Do not call custom_field_set_value() in bug report and bug update if user has no write access.
 * Fix: Printing context in case of errors is not working properly (a lot of notices are generated).
 * Fix #2626: $g_primary_table_tags is documented and in config files but never used 
 * Fix #2839: 'Join incorrect in print_reporter_options and print_assign_to_option_list'
 * Fix #2902: Project name is not printed on bug list report.