@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: file_api.php,v 1.36 2003-04-18 04:02:38 vboctor Exp $
+	# $Id: file_api.php,v 1.37 2003-07-23 19:32:26 beerfrick Exp $
 	# --------------------------------------------------------
 
 	$t_core_dir = dirname( __FILE__ ).DIRECTORY_SEPARATOR;
@@ -21,7 +21,14 @@
 	# --------------------
 	# Gets the filename without the bug id prefix.
 	function file_get_display_name( $p_filename ) {
-		$t_array = explode ('-', $p_filename, 3);
+		$t_array = explode ('-', $p_filename, 2);
+
+		# Check if it's a project document filename (doc-000-filename)
+		# or a bug attachment filename (000-filename)
+		# This is important to handle filenames with '-'s properly
+		if ($t_array[0] == config_get( document_files_prefix )) {
+			$t_array = explode ('-', $p_filename, 3);
+		}
 		return $t_array[count( $t_array ) - 1];
 	}
 	# --------------------
